--- a/src/app/components/memo/memo.component.html
+++ b/src/app/components/memo/memo.component.html
@@ -1,46 +1,147 @@
-<div  id="memo-container"  class="memo-container">
+<div id="memo-container" class="memo-container">
   <form (ngSubmit)="printMemo()">
-    <label for="title">Título:</label>
-    <input id="title" [(ngModel)]="memo.title" name="title" type="text" />
-
-    <label for="gender">Género:</label>
-    <select id="gender" [(ngModel)]="memo.gender" name="gender" (change)="onGenderChange($event)">
-      <option value="Sr.">Señor</option>
-      <option value="Sra.">Señora</option>
+    <h1>Memo</h1>
+      <div class="form-group">
+    <label for="sucursal">Dirigido a Sucursal o Departamento:</label>
+    <select id="sucursal" [(ngModel)]="memo.sucursal" name="sucursal" (change)="onSucursal($event)">
+      <option value="Dilipa Villaflora">Sur</option>
+      <option value="Dilipa Carrión">Carrión</option>
+      <option value="Dilipa Portoviejo">Portoviejo</option>
+      <option value="Ventas Externas">Ventas Externas</option>
+      <option value="Centro de Acopio">Acopio</option>
+      <option value="Dilipa Oficinas">Oficinas</option>
+      <option value="Dilipa Santa Clara">Universidad</option>
+      <option value="Dilipa Tumbaco 1">Tumbaco 1</option>
+      <option value="Dilipa Tumbaco 2">Tumbaco 2</option>
+      <option value="Dilipa Ambato">Ambato</option>
+      <option value="Dilipa Ibarra">Ibarra</option>
+      <option value="Dilipa Santo Domingo 1">Santo 1</option>
+      <option value="Dilipa Santo Domingo 2">Santo 2</option>
+      <option value="Dilipa Santo Domingo 3">Santo 3</option>
+      <option value="Dilipa Kennedy">Auto Servicio</option>
+      <option value="Dilipa Calderón">Calderón</option>
+      <option value="Dilipa Cotocollao">Cotocollao</option>
+      <option value="Sistemas">Sistemas</option>
+      <option value="Contabilidad">Contabilidad</option>
+      <option value="Recursos Humanos">Recursos Humanos</option>
+      <option value="Compras">Compras</option>
+      <option value="Marketing" id="specificRecipient">Marketing</option>
+      <option value="Otros">Otro</option>
     </select>
-
-    <label for="recipient">Para:</label>
-    <input id="recipient" [(ngModel)]="memo.recipient" name="recipient" type="text" />
-
-    <label for="location">Ubicación:</label>
-    <input id="location" [(ngModel)]="memo.location" name="location" type="text" />
-
-    <label for="branch">Sucursal:</label>
-    <select id="branch" [(ngModel)]="memo.branch" name="branch" (change)="onBranchChange($event)">
-      <option value="Sucursal 1">Sucursal 1</option>
-      <option value="Sucursal 2">Sucursal 2</option>
-      <option value="specificBranch">Sucursal Específica</option>
+  </div>
+    <div *ngIf="mostrarEncargado" class="form-group">
+      <label for="encargado">Encargado:</label>
+      <input id="encargado" [(ngModel)]="memo.encargado" name="encargado" type="text"
+        [readonly]="!isEncargadoEditable" />
+    </div>
+    <div class="form-group">
+    <label for="dirigidoD">De Sucursal o Departamento:</label>
+    <select id="dirigidoD" [(ngModel)]="memo.dirigidoD" name="dirigidoD" (change)="onDirigido($event)">
+      <option value="Dilipa Villaflora">Sur</option>
+      <option value="Dilipa Carrión">Carrión</option>
+      <option value="Dilipa Portoviejo">Portoviejo</option>
+      <option value="Ventas Externas">Ventas Externas</option>
+      <option value="Centro de Acopio">Acopio</option>
+      <option value="Dilipa Oficinas">Oficinas</option>
+      <option value="Dilipa Santa Clara">Universidad</option>
+      <option value="Dilipa Tumbaco 1">Tumbaco 1</option>
+      <option value="Dilipa Tumbaco 2">Tumbaco 2</option>
+      <option value="Dilipa Ambato">Ambato</option>
+      <option value="Dilipa Ibarra">Ibarra</option>
+      <option value="Dilipa Santo Domingo 1">Santo 1</option>
+      <option value="Dilipa Santo Domingo 2">Santo 2</option>
+      <option value="Dilipa Santo Domingo 3">Santo 3</option>
+      <option value="Dilipa Kennedy">Auto Servicio</option>
+      <option value="Dilipa Calderón">Calderón</option>
+      <option value="Dilipa Cotocollao">Cotocollao</option>
+      <option value="Sistemas">Sistemas</option>
+      <option value="Contabilidad">Contabilidad</option>
+      <option value="Recursos Humanos">Recursos Humanos</option>
+      <option value="Compras">Compras</option>
+      <option value="Marketing" id="specificRecipient">Marketing</option>
+      <option value="Otros">Otro</option>
     </select>
+  </div>
+    <div *ngIf="mostrarEncargadoD" class="form-group">
+      <label for="additionalField2">Encargado:</label>
+      <input id="additionalField2" [(ngModel)]="memo.encargadoD" name="additionalField2" type="text"
+        [readonly]="!isEncargadoEditable2" />
+    </div>
 
-    <div *ngIf="showAdditionalField">
-      <label for="additionalField">Campo Adicional:</label>
-      <input id="additionalField" [(ngModel)]="memo.additionalField" name="additionalField" type="text" />
-    </div>  
+    <div *ngIf="showAdditionalFieldForSistemas" class="form-group">
+      <label for="additionalFieldForSistemas">Tipo:</label>
+      <select id="additionalFieldForSistemas" [(ngModel)]="memo.additionalField" name="additionalFieldForSistemas">
+        <option value="Activos">Activos</option>
+        <option value="Documentos">Documentos</option>
+      </select>
+    </div>
 
-    <label for="content">Contenido:</label>
+    <div *ngIf="memo.additionalField === 'Activos'" class="form-group">
+      <label for="tecnitaser">Tecnitaser:</label>
+      <input id="tecnitaser" [(ngModel)]="memo.tecnitaser" name="tecnitaser" type="text">
+      <label for="marca">Marca:</label>
+      <input id="marca" [(ngModel)]="memo.marca" name="marca" type="text">
+      <label for="descripcion">Descripción:</label>
+      <input id="descripcion" [(ngModel)]="memo.descripcion" name="descripcion" type="text">
+      <label for="numeroSerie">Número de Serie:</label>
+      <input id="numeroSerie" [(ngModel)]="memo.numeroSerie" name="numeroSerie" type="text">
+      <label for="estado">Estado Activo:</label>
+      <input id="estado" [(ngModel)]="memo.estado" name="estado" type="text">
+      <label for="cargador">Cargador:</label>
+      <input id="cargador" [(ngModel)]="memo.cargador" name="cargador" type="text">
+    </div>
+
+    <div *ngIf="memo.additionalField === 'Documentos'" class="form-group">
+      <label for="reporteCaja"><input type="checkbox"/>Reporte de Caja:</label>
+      <input id="reporteCaja" [(ngModel)]="memo.reporteCaja" name="reporteCaja" type="text">
+      <label for="notaPedido"><input type="checkbox" />Nota de Pedido:</label>
+      <input id="notaPedido" [(ngModel)]="memo.notaPedido" name="notaPedido" type="text">
+      <label for="formularioDevolucion"><input type="checkbox" />Formulario de Devolución de Mercadería:</label>
+      <input id="formularioDevolucion" [(ngModel)]="memo.formularioDevolucion" name="formularioDevolucion" type="text">
+      <label for="rebornGrande"><input type="checkbox" />Reborn Grande:</label>
+      <input id="rebornGrande" [(ngModel)]="memo.rebornGrande" name="rebornGrande" type="text">
+      <label for="rebornPequeno"><input type="checkbox" />Reborn Pequeño:</label>
+      <input id="rebornPequeno" [(ngModel)]="memo.rebornPequeno" name="rebornPequeno" type="text">
+      <label for="rolloPrecio"><input type="checkbox" />Rollo de Precio:</label>
+      <input id="rolloPrecio" [(ngModel)]="memo.rolloPrecio" name="rolloPrecio" type="text">
+      <label for="rolloSeguridad"><input type="checkbox" />Rollo de Seguridad:</label>
+      <input id="rolloSeguridad" [(ngModel)]="memo.rolloSeguridad" name="rolloSeguridad" type="text">
+    </div>
+
+    <div class="form-group">
+    <label for="content">Asunto:</label>
     <textarea id="content" [(ngModel)]="memo.content" name="content"></textarea>
-
+      </div>
     <button type="button" (click)="printMemo()">Generar PDF</button>
   </form>
 
-  <div id="pdf-content" class="pdf-content">
-    <h2>{{ memo.title }}</h2>
-    <p><strong>Para:</strong> {{ memo.gender }} {{ memo.recipient }}</p>
-    <p><strong>Ubicación:</strong> {{ memo.location }}</p>
-    <p><strong>Sucursal:</strong> {{ memo.branch }}</p>
-    <p><strong>Contenido:</strong> {{ memo.content }}</p>
-    <div *ngIf="showAdditionalField">
-      <p><strong>Campo Adicional:</strong> {{ memo.additionalField }}</p>
+  <div class="pdf-container">
+    <!-- Contenido original -->
+    <div id="pdf-content-left" #pdfContent1 class="pdf-content">
+      <div class="centered">
+        <h3>{{ memo.title }}</h3>
+        <p><strong>Fecha:</strong> {{ memo.date }} <strong> Hora:</strong> {{ memo.time }}</p>
+        <p><strong>Para:</strong> {{ memo.sucursal }} {{ memo.encargado }}</p>
+        <p><strong>De:</strong> {{ memo.dirigidoD }} {{ memo.encargadoD }}</p>
+        <p><strong>Asunto:</strong> {{ memo.content }}</p>
+        <div *ngIf="showAdditionalField">
+          <p><strong>Campo Adicional:</strong> {{ memo.additionalField }}</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Copia del contenido -->
+    <div id="pdf-content-right" #pdfContent2 class="pdf-content pdf-content-copy">
+      <div class="centered">
+        <h3>{{ memo.title }}</h3>
+        <p><strong>Fecha:</strong> {{ memo.date }} <strong> Hora:</strong> {{ memo.time }}</p>
+        <p><strong>Para:</strong> {{ memo.sucursal }} {{ memo.encargado }}</p>
+        <p><strong>De:</strong> {{ memo.dirigidoD }} {{ memo.encargadoD }}</p>
+        <p><strong>Asunto:</strong> {{ memo.content }}</p>
+        <div *ngIf="showAdditionalField">
+          <p><strong>Campo Adicional:</strong> {{ memo.additionalField }}</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
