--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,21 @@
-<app-memo></app-memo>
+<!-- app.component.html -->
+<header>
+  <!-- Encabezado de tu aplicación -->
+
+  <!-- Barra de navegación si la tienes -->
+  <nav>
+    <ul>
+
+      <!-- Otros enlaces de navegación si los tienes -->
+    </ul>
+  </nav>
+</header>
+
+<!-- Área de contenido principal -->
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<footer>
+  <!-- Pie de página de tu aplicación -->
+</footer>
