--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,40 +1,65 @@
 .login-container {
   max-width: 400px;
-  margin: 50px auto;
+  margin: 40px auto;
   padding: 20px;
   border: 1px solid #ccc;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #f9f9f9;
+  background-color: #eeeeee;
 }
-
+.imagen {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 350px;
+  height: 100px;
+  border-color: #464240;
+  border-radius: 15px;
+}
 h2 {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .form-group {
   margin-bottom: 15px;
 }
+.container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
 
+.pdf-container,
+.memo-container {
+  width: 48%;
+}
 label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
+  background-color: #eeeeee;
 }
 
 input[type="text"],
 input[type="password"] {
   width: 90%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 5px solid #ccc;
   border-radius: 5px;
 }
 
+.no-background {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  margin-left: 5px; /* Ajusta el espacio entre el label y el input según tu preferencia */
+}
+
 .btn {
-  width: 100%;
+  width: 95%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #464240;
   color: white;
   border: none;
   border-radius: 5px;
@@ -43,7 +68,7 @@ input[type="password"] {
 }
 
 .btn:hover {
-  background-color: #0056b3;
+  background-color: #967d6c;
 }
 
 .error-message {
