--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,16 @@
 <div class="login-container">
-  <h2>Login</h2>
+  <img src=".\assets\logo.png " alt="imagen logo" class="imagen">
+  <h2>CONTROL INTERNO DE DOCUMENTOS</h2>
   <form (ngSubmit)="login()">
     <div class="form-group">
-      <label for="username">Username</label>
+      <label for="username">Usuario:</label>
       <input type="text" id="username" [(ngModel)]="username" name="username" required>
     </div>
     <div class="form-group">
-      <label for="password">Password</label>
+      <label for="password">Contraseña:</label>
       <input type="password" id="password" [(ngModel)]="password" name="password" required>
     </div>
-    <button type="submit" class="btn">Login</button>
+    <button type="submit" class="btn">Ingresar</button>
   </form>
-  <div *ngIf="loginError" class="error-message">Invalid credentials, please try again.</div>
+  <div *ngIf="loginError" class="error-message">La contraseña o el usuario no son correctas intentalo de nuevo.</div>
 </div>
