--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
   <router-outlet></router-outlet>
 </main>
 
-<footer>
+<footer class="footer">
   <!-- Pie de página de tu aplicación -->
+  <p>Elaborado por: A.R.</p>
 </footer>
